# RAGChat

./: .gitignore  API_DOCUMENTATION.md  HAYSTACK_INTEGRATION.md  README.md  TRAINING_GUIDE.md  cli.py  create_dataset.py  fix_dataset.py  fix_dataset_flatten.py  main.py  pdf_test.py  preprocess.py  pyproject.toml  pyvenv.cfg  questions.txt  rebuild_dataset.py  run_training_apple_silicon.sh  server.py  setup_token.py  train.py  train_llama.py
.cursor/rules/: haystack2.mdc
data/: preprocessed_data.json  pseudo_data.json
docs/: sample_first_responder_guide.txt
frontend/: package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatWindow.jsx  MessageInput.jsx  Sidebar.jsx
src/cli/: __init__.py  main.py
src/data_processing/: __init__.py  chunker.py  converter.py  haystack_processor.py  processor.py  types.py
src/firstresponders_chatbot/: __main__.py
src/firstresponders_chatbot/cli/: cli.py  run_cli.py
src/firstresponders_chatbot/preprocessing/: preprocess.py  preprocessor.py
src/firstresponders_chatbot/rag/: rag_system.py  rag_system.py.bak  run_server.py  server.py
src/firstresponders_chatbot/training/: create_dataset.py  dataset_creator.py  trainer.py
test/debug/: debug_response_extraction.py
tests/: __init__.py  test_data_processing.py
tinyllama-1.1b-first-responder-fast/adapter/: adapter_config.json
