[project]
name = "chatbot-rag-firefight"
version = "0.1.0"
description = "A RAG-based chatbot for firefighters and first responders using Python 3.12"
requires-python = ">=3.12"
authors = [{ name = "Edmund Yu" }]
dependencies = [
    "haystack-ai>=2.0.0",
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "sentence-transformers>=2.2.2",
    "faiss-cpu>=1.7.4",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.6",
    "black>=23.11.0",
    "pre-commit>=3.5.0",
]
docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
]
web = ["gradio>=4.0.0", "fastapi>=0.104.0", "uvicorn>=0.24.0"]

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = ["E501"]

[tool.black]
target-version = ["py312"]
line-length = 88

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-ra -q --cov=src"
testpaths = ["tests"]
