[project]
name = "firstresponders-chatbot"
version = "0.1.0"
description = "A RAG-based chatbot for firefighters and first responders using Haystack 2.0 and Flan-T5-Small"
requires-python = ">=3.12"
authors = [{ name = "Edmund Yu" }]
dependencies = [
    "haystack-ai>=2.11.0",
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "sentence-transformers>=2.2.2",
    "faiss-cpu>=1.7.4",
    "pyyaml>=6.0.1",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "datasets>=2.14.0",
    "accelerate>=0.25.0",
    "sentencepiece>=0.1.99",
    "protobuf>=4.23.4",
    "pypdf>=3.17.0",
    "nltk>=3.8.1",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
    "pydantic>=2.0.0",
    "bitsandbytes>=0.41.0",
    "evaluate>=0.4.0",
    "rouge-score>=0.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.6",
    "black>=23.11.0",
    "pre-commit>=3.5.0",
]
docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
]
web = [
    "flask>=2.3.0", 
    "flask-cors>=4.0.0", 
    "fastapi>=0.104.0", 
    "uvicorn>=0.24.0", 
    "gradio>=4.0.0"
]

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = ["E501"]

[tool.black]
target-version = ["py312"]
line-length = 88

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-ra -q --cov=src"
testpaths = ["tests"]
